--- a/src/main/resources/static/css/components/typography.css
+++ b/src/main/resources/static/css/components/typography.css
@@ -226,3 +226,19 @@ h3 {
 .content-section p {
     margin-bottom: 1.25rem;
 }
+
+.journal-post-text {
+    padding: 0 1.5rem 1rem 1.5rem; /* Текст дихає, є відступи з боків і знизу */
+    line-height: 1.5;
+}
+.journal-post-media-box {
+    padding: 0 1.5rem 1.5rem 1.5rem; /* Безпечний відступ для медіа в стрічці */
+}
+.journal-post-img,
+.journal-post-video {
+    width: 100%;
+    height: auto;
+    border-radius: 0.5rem;
+    object-fit: contain;
+    display: block;
+}
